apps/bux-console/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bux-console
  labels:
    app: bux-console
spec:
  selector:
    app.kubernetes.io/name: bux-console
  type: ClusterIP
  ports:
    - name: web
      port: 3000
      targetPort: web
